@startuml
skinparam classAttributeIconSize 0

abstract class Usuario {
    - id: Long
    - nome: String
    - email: String
    - login: String
    - senhaHash: String
    + autenticar(senha: String): Boolean
}

class Aluno {
    - cpf: String
    - rg: String
    - endereco: String
    - curso: String
    - saldoMoedas: Integer
    + cadastrar(): void
    + consultarExtrato(): List<Transacao>
    + resgatarVantagem(vantagem: Vantagem): Cupom
}

class Professor {
    - cpf: String
    - departamento: String
    - saldoCorrente: Integer
    + consultarExtrato(): List<Transacao>
    + enviarMoedas(aluno: Aluno, quantidade: Integer, motivo: String): Transacao
    + acumularSaldoSemestral(): void
}

class EmpresaParceira {
    - cnpj: String
    + cadastrarVantagem(descricao: String, foto: Byte[], custo: Integer): Vantagem
}

class InstituicaoEnsino {
    - id: Long
    - nome: String
    + listarProfessores(): List<Professor>
}

class Vantagem {
    - id: Long
    - descricao: String
    - fotoUrl: String
    - custoMoedas: Integer
}

abstract class Transacao {
    - id: Long
    - dataHora: LocalDateTime
    - valorMoedas: Integer
}

class TransacaoEnvio {
    - motivo: String
}

class CupomResgate {
    - codigoGerado: String
}

' Herança
Usuario <|-- Aluno
Usuario <|-- Professor
Usuario <|-- EmpresaParceira
Transacao <|-- TransacaoEnvio
Transacao <|-- CupomResgate

' Associações e Multiplicidades
InstituicaoEnsino "1" -- "0..*" Aluno : possui >
InstituicaoEnsino "1" -- "0..*" Professor : vincula >

EmpresaParceira "1" *-- "0..*" Vantagem : gerencia >

Professor "1" -- "0..*" TransacaoEnvio : remetente >
Aluno "1" -- "0..*" TransacaoEnvio : destinatario >

Aluno "1" -- "0..*" CupomResgate : realiza >
Vantagem "1" -- "0..*" CupomResgate : referente a >

@enduml
